# cfm-agentic-forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  GUIDELINES.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
aieng-forecasting/: pyproject.toml
aieng-topic-impl/tests/: __init__.py
implementations/: README.md  pyproject.toml
implementations/boc_rate_decisions/: 01_boc_data_exploration.ipynb  02_boc_rate_cut_experiment.ipynb  02_boc_rate_direction_experiment.ipynb  03_rationale_alignment.ipynb  README.md  analysis.py  plots.py
implementations/economic_forecasting/: cpi_data_exploration.ipynb
implementations/energy_oil_forecasting/: .gitignore  01_wti_case_study.ipynb  02_intro_agentic_predictor.ipynb  03_one_agent_three_tasks.ipynb  04_systematic_backtest_eval.ipynb  05_adaptive_agent_training.ipynb  README.md  (+7 more)
planning-docs/: adaptive-agent-iter2-plan.md  adaptive-agent-notebook-design.md  backlog.md  bootcamp-workplan.md  planning-notes.md  roadmap.md  technical-design.md
playground/news_search/: README.md  pyproject.toml  run.py
playground/news_search/configs/: default.yaml
playground/news_search/news_search/: _settings.py  agent.py  config_types.py  runner.py
reference_specs/: cpi_allitems_12m.yaml  cpi_allitems_eval_2yr.yaml
scripts/: build_concierge_context.py  build_nb05.py  build_nb06.py  cache_wti_curriculum_news.py  fetch_cpi.py  fetch_statcan.ipynb  fetch_wti.py  setup.sh
(+380 files in other folders)
