[project]
name = "news-search-playground"
version = "0.1.0"
description = "Grounded news-search agent playground using Google ADK + Gemini"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.4.0",
    "langfuse>=2.0.0,<4.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = []
